--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -7,9 +7,9 @@
 <body>
   <h1>FTC Team Elo Ratings</h1>
 
-  <form action="/elo" method="get">
-    <label for="teamnum">Team Number:</label>
-    <input type="text" id="teamnum" name="teamnum">
+  <form action="/elo/" method="get">
+    <label for="x">Team Number:</label>
+    <input type="text" id="x" name="asdf">
     <input type="submit" value="Get Elo">
   </form>
 
