Improved URL Structure

--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -8,22 +8,22 @@
   <h1>FTC Team Elo Ratings</h1>
 
   <form action="/elo/" method="get">
-    <label for="x">Team Number:</label>
-    <input type="text" id="x" name="asdf">
+    <label for="teamnum">Team Number:</label>
+    <input type="text" id="teamnum" name="teamnumber">
     <input type="submit" value="Get Elo">
   </form>
 
   <br>
 
   <form action="/matchup" method="get">
-    <label for="team1">Team 1:</label>
+    <label for="team1">Blue Alliance Team 1:</label>
     <input type="text" id="team1" name="team1">
-    <label for="team2">Team 2:</label>
+    <label for="team2"> Blue Alliance Team 2:</label>
     <input type="text" id="team2" name="team2">
     <br>
-    <label for="team3">Team 3:</label>
+    <label for="team3">Red Alliance Team 1:</label>
     <input type="text" id="team3" name="team3">
-    <label for="team4">Team 4:</label>
+    <label for="team4">Red Alliance Team 2:</label>
     <input type="text" id="team4" name="team4">
     <input type="submit" value="Get Matchup">
   </form>
