added missing slash

--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -15,7 +15,7 @@
 
   <br>
 
-  <form action="/matchup" method="get">
+  <form action="/matchup/" method="get">
     <label for="team1">Blue Alliance Team 1:</label>
     <input type="text" id="team1" name="team1">
     <label for="team2"> Blue Alliance Team 2:</label>
