--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -7,7 +7,7 @@
 <body>
   <h1>FTC Team Elo Ratings</h1>
 
-  <form action="/elo/" method="get">
+  <form action="/elo" method="get">
     <label for="teamnum">Team Number:</label>
     <input type="text" id="teamnum" name="teamnumber">
     <input type="submit" value="Get Elo">
@@ -15,7 +15,7 @@
 
   <br>
 
-  <form action="/matchup/" method="get">
+  <form action="/matchup" method="get">
     <label for="team1">Blue Alliance Team 1:</label>
     <input type="text" id="team1" name="team1">
     <label for="team2"> Blue Alliance Team 2:</label>
