--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>FTC Team Elo Ratings</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
   <h1>FTC Team Elo Ratings</h1>
