--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ input {
 input[type="submit"] {
   width: 100%;
   padding: 5px;
-  background-color: #000;
+  background-color: #cd0000;
   color: #fff;
   border: none;
   cursor: pointer;
