--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FTC Team Elo Ratings</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
@@ -27,6 +29,5 @@
     <input type="text" id="team4" name="team4">
     <input type="submit" value="Get Matchup">
   </form>
-
 </body>
 </html>
