--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Orbitron', sans-serif; /* Techy font */
+  font-family: 'Montserrat', sans-serif; /* Techy font */
   background-color: #080808; /* Darker background */
   color: #fff;
 }
