--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ footer {
 }
 footer {
   text-align: center;
-  background-color: var(--form-bg-color);
+  background-color: var(--background-color);
   padding: 10px;
   position: fixed;
   width: 100%;
