--- a/api/templates/elo.html
+++ b/api/templates/elo.html
@@ -16,10 +16,9 @@
   <main>
     <form action="/elo" method="get" class="combined-form">
       <h2>ELO Rating of Team ({{ teamnumber }})</h2>
-      <p class="elo-description">Check the ELO rating for a team.</p>
+<!--      <p class="elo-description">Calculated elo rating of: .</p>-->
 
-      <p class="elo-details">{{ teamnumber }}</p>
-      <p class="elo-details">ELO Rating:
+      <p class="elo-details">
           <span class="circle">
             <span>{{ rating }}</span>
         </span>
