--- a/style.css
+++ b/style.css
@@ -214,22 +214,7 @@ footer {
 
 }
 
-.elo-rating-circle {
-  width: 50px; /* Set the width of the circle */
-  height: 50px; /* Set the height of the circle */
-  background-color: var(--main-accent);
-  color: var(--background-color);
-  border-radius: 50%; /* Make it a circle */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 20px auto; /* Adjust margin as needed */
-}
 
-.elo-rating-circle p {
-  margin: 0; /* Remove default margin inside the circle */
-  font-size: 18px; /* Set the font size inside the circle */
-}
 
 h2 {
   color: var(--main-accent);
@@ -244,7 +229,7 @@ h2 {
             /*border-radius: 50%;*/
             /*font-size: 32px;*/
  border: double 4px transparent;
-  border-radius: 80px;
+  border-radius: 100%;
   background-image: linear-gradient(var(--form-bg-color), var(--form-bg-color)), radial-gradient(circle at top center, var(--main-accent),var(--red-color));
   background-origin: border-box;
   background-clip: padding-box, border-box;
