--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ footer {
   font-size: 50px; /* Increase font size for better visibility */
   font-weight: bold; /* Make the text bold */
   text-align: center;
-  margin-bottom: 20px;
+  margin: 20px;
 
 }
 
