--- a/api/templates/elo.html
+++ b/api/templates/elo.html
@@ -9,9 +9,13 @@
 </head>
 
 <body>
-  <header>
+<header>
+      <a href="https://ftcelo.vercel.app">
+
     <h1>FTC Team Elo Ratings</h1>
+              </a>
   </header>
+
 
   <main>
     <form action="/elo" method="get" class="combined-form">
