--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -10,7 +10,10 @@
 
 <body>
   <header>
+      <a href="https://ftcelo.vercel.app">
+
     <h1>FTC Team Elo Ratings</h1>
+              </a>
   </header>
 
   <main>
