--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ form {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin: 50px auto;
+  margin: 20px auto;
 }
 
 h1 {
@@ -242,3 +242,101 @@ h2 {
             margin-left: 8px;
             margin-right: 8px;
         }
+
+header a {
+  text-decoration: none; /* Remove default underline */
+  color: var(--red-color); /* Set the color of the link */
+  transition: text-decoration 0.3s; /* Smooth transition for underline */
+
+}
+
+header a:hover {
+  text-decoration: underline; /* Underline on hover */
+}section {
+  background-color: var(--form-bg-color);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+    width: 100%;
+    justify-content: center;
+}
+
+ .blue-pred h2 { color: var(--main-accent)}
+ .red-pred h2 { color: var(--red-color)}
+
+  .blue-pred p { color: var(--white-color)}
+ .red-pred p { color: var(--white-color)}
+  .blue-pred h3 { color: var(--main-accent)}
+ .red-pred h3 { color: var(--red-color)}
+
+
+
+ .blue-circle {
+display: inline-block;
+line-height: 0px;
+/*border-radius: 50%;*/
+/*font-size: 32px;*/
+border: double 4px transparent;
+border-radius: 100%;
+background-image: linear-gradient(var(--form-bg-color), var(--form-bg-color)), radial-gradient(circle at top center, var(--main-accent),var(--main-accent));
+background-origin: border-box;
+background-clip: padding-box, border-box;
+}
+
+.blue-circle span {
+    display: inline-block;
+    padding-top: 50%;
+    padding-bottom: 50%;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+.red-circle {
+display: inline-block;
+line-height: 0px;
+/*font-size: 32px;*/
+border: double 4px transparent;
+border-radius: 100%;
+background-image: linear-gradient(var(--form-bg-color), var(--form-bg-color)), radial-gradient(circle at top center, var(--red-color),var(--red-color));
+background-origin: border-box;
+background-clip: padding-box, border-box;
+}
+
+.red-circle span {
+    display: inline-block;
+    padding-top: 50%;
+    padding-bottom: 50%;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.blue-circle,
+.red-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto 30%; /* Center the circle horizontally */
+}
+
+
+
+.alliance-container {
+  display: flex;
+  justify-content: center;
+      margin: 20px auto;
+
+}
+
+.blue-pred,
+.red-pred {
+  width: 45%;
+  text-align: center;
+  margin: 20px; /* Add margin to create space between the sections */
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap; /* Allow the sections to wrap to the next line on smaller screens */
+  justify-content: center;
+}
