--- a/api/templates/matchup.html
+++ b/api/templates/matchup.html
@@ -22,7 +22,7 @@
       <h3>{{ team1 }} & {{ team2 }}  </h3>
         <p class="blue-details">
           <span class="blue-circle">
-            <span>{{ bluePred }}</span>
+            <span>{{ bluePred }}%</span>
         </span>
         </p>
     </section>
@@ -33,7 +33,7 @@
 
            <p class="red-details">
           <span class="red-circle">
-            <span>{{ redPred }}</span>
+            <span>{{ redPred }}%</span>
         </span>
         </p>
 
