--- a/style.css
+++ b/style.css
@@ -265,8 +265,8 @@ header a:hover {
  .blue-pred h2 { color: var(--main-accent)}
  .red-pred h2 { color: var(--red-color)}
 
-  .blue-pred p { color: var(--white-color)}
- .red-pred p { color: var(--white-color)}
+  .blue-pred p { color: var(--white-color); font-size: 24px}
+ .red-pred p { color: var(--white-color); font-size: 24px}
   .blue-pred h3 { color: var(--main-accent)}
  .red-pred h3 { color: var(--red-color)}
 
