--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -22,7 +22,7 @@
       <p>Enter the team number to retrieve Elo ratings.</p>
 
       <label for="teamnum">Team Number:</label>
-      <input type="text" id="teamnum" name="teamnumber">
+      <input type="text" id="teamnum" name="teamnumber"placeholder="22012">
       <input type="submit" value="Get Elo">
     </form>
 
@@ -35,21 +35,21 @@
         <div class="blue-form">
           <h2>Blue Alliance</h2>
           <label for="team1">Team 1:</label>
-          <input type="text" id="team1" name="team1" class="blue-input">
+          <input type="text" id="team1" name="team1" class="blue-input"placeholder="22012">
           <label for="team2">Team 2:</label>
-          <input type="text" id="team2" name="team2" class="blue-input">
+          <input type="text" id="team2" name="team2" class="blue-input"placeholder="22012">
         </div>
 
         <div class="red-form">
           <h2>Red Alliance</h2>
           <label for="team3">Team 1:</label>
-          <input type="text" id="team3" name="team3" class="red-input">
+          <input type="text" id="team3" name="team3" class="red-input" placeholder="22012">
           <label for="team4">Team 2:</label>
-          <input type="text" id="team4" name="team4" class="red-input">
+          <input type="text" id="team4" name="team4" class="red-input"placeholder="22012">
         </div>
       </div>
 
-      <input type="submit" value="Get Matchup" class="matchup-button">
+      <input style="font-size:20px;" type="submit" value="Get Matchup" class="matchup-button">
     </form>
   </main>
 
