--- a/api/templates/matchup.html
+++ b/api/templates/matchup.html
@@ -12,7 +12,7 @@
 <header>
       <a href="https://ftcelo.vercel.app">
 
-    <h1>FTC Team Elo Ratings</h1>
+    <h1>FTC Elo </h1>
               </a>
   </header>
 
