--- a/api/templates/page.html
+++ b/api/templates/page.html
@@ -23,7 +23,7 @@
 
       <label for="teamnum">Team Number:</label>
       <input type="text" id="teamnum" name="teamnumber"placeholder="22012">
-      <input type="submit" value="Get Elo">
+      <input type="submit" style="font-size:20px;" value="Get Elo">
     </form>
 
 
