--- a/api/templates/error.html
+++ b/api/templates/error.html
@@ -21,6 +21,7 @@
     <form action="/elo" method="get" class="combined-form">
 <!--      <h2> </h2>-->
       <h2 style="display:inline; color: var(--red-color);">Error, please return to main page and try again. </h2>
+      <h2 style="display:inline; color: var(--red-color);">Error, please return to main page and try again. </h2>
 <!--      <p class="elo-description">Calculated elo rating of: .</p>-->
 
 
