Added teamNames to matchup

--- a/api/templates/matchup.html
+++ b/api/templates/matchup.html
@@ -19,7 +19,7 @@
   <main>
     <section class="blue-pred">
       <h2>Blue Alliance</h2>
-      <h3>{{ team1 }} & {{ team2 }}  </h3>
+      <h3>{{{ team1Name }} ({{ team1 }}) & {{ team2Name }} ({{ team2 }})   </h3>
         <p class="blue-details">
           <span class="blue-circle">
             <span>{{ bluePred }}%</span>
@@ -29,14 +29,12 @@
 
     <section class="red-pred">
       <h2>Red Alliance</h2>
-      <h3 >{{ team3 }} & {{ team4 }}  </h3>
-
-           <p class="red-details">
+      <h3 > {{ team3Name }} ({{ team3 }}) & {{ team4Name }} ({{ team4 }})  </h3>
+          <p class="red-details">
           <span class="red-circle">
             <span>{{ redPred }}%</span>
         </span>
         </p>
-
     </section>
   </main>
 
