added teamnames to elo

--- a/api/templates/elo.html
+++ b/api/templates/elo.html
@@ -20,7 +20,7 @@
   <main>
     <form action="/elo" method="get" class="combined-form">
 <!--      <h2> </h2>-->
-      <h2 style="display:inline;">ELO Rating of Team</h2> <h2 style="display:inline; color: #e78282;">({{ teamnumber }})</h2>
+      <h2 style="display:inline;">ELO Rating of {{ teamName }}</h2> <h2 style="display:inline; color: #e78282;">({{ teamnumber }})</h2>
 <!--      <p class="elo-description">Calculated elo rating of: .</p>-->
 
       <p class="elo-details">
