--- a/api/templates/matchup.html
+++ b/api/templates/matchup.html
@@ -19,7 +19,7 @@
   <main>
     <section class="blue-pred">
       <h2>Blue Alliance</h2>
-      <h3>{{{ team1Name }} ({{ team1 }}) & {{ team2Name }} ({{ team2 }})   </h3>
+      <h3>{{ team1Name }} ({{ team1 }}) & {{ team2Name }} ({{ team2 }})   </h3>
         <p class="blue-details">
           <span class="blue-circle">
             <span>{{ bluePred }}%</span>
