--- a/api/templates/error2.html
+++ b/api/templates/error2.html
@@ -20,7 +20,7 @@
   <main>
     <form action="/elo" method="get" class="combined-form">
 <!--      <h2> </h2>-->
-      <h2 style="display:inline; color: var(--red-color);">Error, seems like that team hasn't played this season! </h2>
+      <h2 style="display:inline; color: var(--red-color);">Error, seems like a team you're looking for, hasn't played this season! </h2>
 <!--      <p class="elo-description">Calculated elo rating of: .</p>-->
 
 
