--- a/api/templates/elo.html
+++ b/api/templates/elo.html
@@ -38,5 +38,8 @@
   <a href="https://ftc22012.wixsite.com/robotics" class="footer-link" target="_blank">Visit our website</a>
 </footer>
 </body>
-
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </html>
