--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background-color: var(--background-color);
   color: var(--white-color);
   margin: 0;
-  padding: 0;
+  padding: 0px 0px 15%;
 }
 
 header {
