--- a/api/templates/elo.html
+++ b/api/templates/elo.html
@@ -34,7 +34,7 @@
   </main>
 <footer class="footer-content">
   <p class="footer-text">FTC Elo Ratings</p>
-  <p class="footer-text">Created by FTC 22012</p>
+  <p class="footer-text">Created by <a href="https://monishsaravana.com/">Monish Saravana </a> from team  <a href="https://linktr.ee/ftc22012"> FTC 22012</p>
   <a href="https://ftc22012.wixsite.com/robotics" class="footer-link" target="_blank">Visit our website</a>
 </footer>
 </body>
@@ -46,5 +46,5 @@
 <script>
   window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
 </script>
-<script defer src="/_vercel/speed-insights/script.js"></script>
+<script defer src="/_vercel/speed-insights/script.js"></script>\
 </html>
