Update matchup.html with personal website

--- a/api/templates/matchup.html
+++ b/api/templates/matchup.html
@@ -39,9 +39,8 @@
   </main>
 
 <footer class="footer-content">
-  <p class="footer-text">FTC Elo Ratings</p>
-  <p class="footer-text">Created by FTC 22012</p>
-  <a href="https://ftc22012.wixsite.com/robotics" class="footer-link" target="_blank">Visit our website</a>
+   <p class="footer-text">FTC Elo Ratings</p>
+  <p class="footer-text">Created by <a href="https://monishsaravana.com/">Monish Saravana </a> from team  <a href="https://linktr.ee/ftc22012"> FTC 22012</p>
 </footer>
 </body>
 <script>
